--- a/css/index.css
+++ b/css/index.css
@@ -45,6 +45,10 @@ a img {
 a {
   color: red;
 }
+.content img {
+  max-width: 100%;
+  height: auto;
+}
 /* Pomocne tridy: clearovani atd. */
 /*
 
@@ -88,11 +92,8 @@ a {
 }
 .gallery-item {
   float: left;
-  width: 170px;
-  margin: 0 15px 15px 0;
-}
-.gallery-item img {
-  width: 170px;
+  width: 31.48148148148148%;
+  margin: 0 2.7777777777777777% 15px 0;
 }
 .gallery-item a {
   margin-bottom: 4px;
@@ -110,11 +111,32 @@ a {
 }
 /*
 
+--- Mapa ---
+
+*/
+.map {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 62.5%;
+}
+.map iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+/*
+
 --- Navigace ---
 
 */
 .nav {
   margin-bottom: 32px;
+}
+@media print {
+  .nav {
+    display: none;
+  }
 }
 .nav ul {
   list-style-type: none;
@@ -130,11 +152,6 @@ a {
   clear: both;
 }
 /* V tisku nezobrazujeme */
-@media print {
-  .nav {
-    display: none;
-  }
-}
 /* Polozka navigace: zakladna a male displeje */
 .nav-item {
   display: block;
@@ -160,7 +177,7 @@ b .nav-item,
 }
 /* Layout pro siroke dipleje */
 .nav li {
-  width: 245px;
+  width: 25%;
   float: left;
   margin: 0;
   padding: 0;
@@ -249,29 +266,30 @@ th img {
   }
   /* Layout  */
   .container {
-    width: 980px;
+    max-width: 980px;
     position: relative;
     margin: 16px auto;
     background: #fff;
+    -webkit-box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.5);
     box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.5);
-    color: 0px 0px 16px rgba(0, 0, 0, 0.5);
   }
   .logo {
-    padding: 30px;
+    padding: 30px 3.061224489795918%;
     margin: 0;
   }
   .content {
     float: left;
-    padding-left: 30px;
-    padding-right: 30px;
-    width: 540px;
+    padding-left: 3.061224489795918%;
+    padding-right: 3.061224489795918%;
+    width: 55.10204081632652%;
     margin-bottom: 48px;
   }
   .side {
     float: right;
-    padding-left: 30px;
-    padding-right: 30px;
-    width: 320px;
+    padding-left: 3.061224489795918%;
+    padding-right: 3.061224489795918%;
+    width: 32.6530612244898%;
     margin-bottom: 48px;
   }
 }
+/*# sourceMappingURL=index.css.map */
