--- a/less/ui/layout.less
+++ b/less/ui/layout.less
@@ -6,6 +6,8 @@
 
 /* Sedive pozadi stranky */
 
+@container-width: 980px;
+
 body {
   background: #ccc;
 }
@@ -13,31 +15,31 @@ body {
 /* Layout  */
 
 .container {
-  width: 980px;
+  max-width: @container-width;
   position: relative;
   margin: 16px auto;
   background: #fff;
+  -webkit-box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.5);
-  color: 0px 0px 16px rgba(0, 0, 0, 0.5);
 }
 
 .logo {
-  padding: 30px;
+  padding: 30px percentage(30px/@container-width);
   margin: 0;
 }
 
 .content {
   float: left;
-  padding-left: 30px;
-  padding-right: 30px;
-  width: 540px;
+  padding-left: percentage(30px/@container-width);
+  padding-right: percentage(30px/@container-width);
+  width: percentage(540px/@container-width);
   margin-bottom: 48px;
 }
 
 .side {
   float: right;
-  padding-left: 30px;
-  padding-right: 30px;
-  width: 320px;
+  padding-left: percentage(30px/@container-width);
+  padding-right: percentage(30px/@container-width);
+  width: percentage(320px/@container-width);
   margin-bottom: 48px;
 }
