--- a/css/index.css
+++ b/css/index.css
@@ -151,7 +151,6 @@ a {
 .nav ul:after {
   clear: both;
 }
-/* V tisku nezobrazujeme */
 /* Polozka navigace: zakladna a male displeje */
 .nav-item {
   display: block;
@@ -176,18 +175,20 @@ b .nav-item,
   border-bottom: none;
 }
 /* Layout pro siroke dipleje */
-.nav li {
-  width: 25%;
-  float: left;
-  margin: 0;
-  padding: 0;
-}
-.nav-item {
-  border-left: 1px solid #fff;
-  border-bottom: none;
-}
-.nav li:first-child .nav-item {
-  border-left: none;
+@media screen and (min-width: 440px) {
+  .nav li {
+    width: 25%;
+    float: left;
+    margin: 0;
+    padding: 0;
+  }
+  .nav-item {
+    border-left: 1px solid #fff;
+    border-bottom: none;
+  }
+  .nav li:first-child .nav-item {
+    border-left: none;
+  }
 }
 /*
 
@@ -254,7 +255,7 @@ th img {
   text-align: right;
 }
 /* Layout webu ve sloupeccich */
-@media screen {
+@media screen and (min-width: 840px) {
   /*
 
 --- Layout - pro siroke displeje ---
