--- a/less/ui/nav.less
+++ b/less/ui/nav.less
@@ -19,9 +19,6 @@
   padding: 0;
 }
 
-/* V tisku nezobrazujeme */
-
-
 /* Polozka navigace: zakladna a male displeje */
 
 .nav-item {
@@ -52,18 +49,22 @@ b .nav-item,
 
 /* Layout pro siroke dipleje */
 
-.nav li {
-  width: 25%;
-  float: left;
-  margin: 0;
-  padding: 0;
-}
+@media screen and (min-width: 440px) {
 
-.nav-item {
-  border-left: 1px solid #fff;
-  border-bottom: none;
-}
+  .nav li {
+    width: 25%;
+    float: left;
+    margin: 0;
+    padding: 0;
+  }
 
-.nav li:first-child .nav-item {
-  border-left: none;
+  .nav-item {
+    border-left: 1px solid #fff;
+    border-bottom: none;
+  }
+
+  .nav li:first-child .nav-item {
+    border-left: none;
+  }
+
 }
