--- a/css/index.css
+++ b/css/index.css
@@ -107,7 +107,13 @@ a {
 
 */
 .head {
-  background: url('../img/sportsmen_full.png') no-repeat right center;
+  background: url('../img/sportsmen_full.png') no-repeat right top;
+  background-size: contain;
+}
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  .head {
+    background-image: url('../img/sportsmen_full_2x.png');
+  }
 }
 /*
 
